Add custom font
from fonts.google.com

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
       
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">  
+      
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
       <div class="container-fluid">
-        /*Jumbotron goes here*/
+        <!Jumbotron goes here>
       </div>
     <h1>Hello, coders!</h1>
       <h2>I heart git</h2>
